--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <b>角度</b><br>
         V = ${ (V*180/Math.PI).toFixed(2) }°<br>
         H = ${ (H*180/Math.PI).toFixed(2) }°<br><br>
-        <b>θ</b><br>
+        <b>合成角θ</b><br>
         θ = ${ (theta*180/Math.PI).toFixed(2) }°
       `;
     }
